--- a/argos.html
+++ b/argos.html
@@ -27,7 +27,7 @@
           <!-- left-column -->
         <div class="col">
           <h1>Argos<br> Design</h1>
-
+<p>Argos Design is a boutique furniture manufacturing and design studio crafting custom pieces for individual and commercial clients across the U.S.</p>
         </div>
         <!-- right-column -->
         <div class="col">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </section>
-    
+
     <section >
       <div class="container">
         <!-- right-column -->
@@ -53,9 +53,7 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief</h3>
-      <p>Argos Design is a boutique furniture manufacturing and design studio crafting custom pieces for individual and commercial clients across the U.S.
-<p>The project was started when Cathy Depietro, founder of Argos, realized she needed to leverage her website design to make it as easy as possible for new clients to contact her and request a quote for work. She also wanted to update the look and feel of her brand which would also easily translate to other channels. The new look for the site was to be simple, modern, and confident, a reflection of Cathy’s personal style, and present a reliable and sophisticated experience for her users.
-</p>    </div>
+<p>The project started when Cathy Depietro, founder of Argos, realized she needed to leverage her website design to make it as easy as possible for new clients to contact her and request a quote for work. She also wanted to update the look and feel of her brand which needed to extend into other channels. The new look for the site was to be simple, modern, and confident, a reflection of Cathy’s personal style, and present a reliable and sophisticated experience for her users.</p>    </div>
       <!-- right-column -->
       <div class="col">
           <h3>Role:</h3>
@@ -71,9 +69,8 @@
       <div class="container">
         <!-- long-column -->
         <div class="col">
-            <figure>
-              <img src="img/argos1.jpg" alt="">
-            </figure>
+              <img src="img/argoshome.jpg" alt="">
+
         </div>
         </div>
 
@@ -85,13 +82,10 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Process </h3>
-<p>Cathy had cultivated a small group of loyal customers, so she understood what her clients looked liked. This helped me build general personas which included: business owners, executives, and office coordinators. With this in mind I put together simple wireframes to take the user from landing on a page to requesting a quote.
-</p><p>Cathy did not have a fixed deadline which helped us explore the brand deeper by looking at current industry trends, website styles, and exploring a mood board. She had also worked with an agency which created her logo and which she wanted to keep and work into the new website. I built three versions using simple wireframes, reviewed with her and then selected the winner.
-</p>
+<p>Cathy had cultivated a small group of loyal customers, so she understood what her clients looked liked. This helped me build general personas which included: business owners, executives, and office coordinators. With this in mind I put together simple wireframes to take the user from landing on a page to requesting a quote. I built three simple wireframes, reviewed each with her, and then selected the best layout.</p>
 </div>
         <!-- right-column -->
         <div class="col">
-
         </div>
         </div>
       </div>
@@ -101,9 +95,8 @@
       <div class="container">
         <!-- long-column -->
         <div class="col">
-            <figure>
-              <img src="img/wires1.png" alt="">
-            </figure>
+              <img src="img/sketch.png" alt="">
+
         </div>
         </div>
     </section>
@@ -112,12 +105,12 @@
         <div class="row myrow">
           <!-- left-column -->
         <div class="col">
-<p>  Then I asked for any imagery and copy she had and put together a visual mockup. After some more feedback through online video chats and email reviews, I tweaked some colors and type, then generated a high fidelity mockup.
-</p>
+
 </div>
         <!-- right-column -->
         <div class="col">
-
+<p>Cathy did not have a fixed deadline which helped us explore the brand deeper by looking at current industry trends, website styles, and exploring a mood board. She had also worked with an agency to create a logo, which she wanted to keep and work into the new branding.
+</p>
         </div>
         </div>
       </div>
@@ -126,9 +119,8 @@
       <div class="container">
         <!-- long-column -->
         <div class="col">
-            <figure>
-              <img src="img/argos2.jpg" alt="">
-            </figure>
+              <img src="img/mood.jpg" alt="">
+
         </div>
         </div>
     </section>
@@ -139,12 +131,12 @@
         <div class="row myrow">
           <!-- left-column -->
           <div class="col">
-                <img src="img/typecolor.jpg.png" alt="">
+            <h3>Color and Type</h3>
+  <p>The original mood board had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel. </p>
+
           </div>
         <!-- right-column -->
         <div class="col">
-          <h3>Color and Type</h3>
-<p>The original mood board had some cooler tones such as dark blue, green and brown. I played with the saturation and brightness of those colors to create a color palette with blue as its main color, a secondary dark brown, a complementary shade of tan and some grays. Her original logo used the ‘Trueno’ a modern and geometric type, so I explored a complementary font and landed on Open Sans because of its softer feel. </p>
         </div>
       </div>
     </section>
@@ -154,7 +146,19 @@
           <!-- left-column -->
           <div class="col">
               <figure>
-                <img src="img/typecolor.jpg" alt=""></figure>
+                <img src="img/fonts.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+              <figure>
+                <img src="img/color.jpg" alt=""></figure>
           </div>
         <!-- right-column -->
 
@@ -182,9 +186,44 @@
         <!-- right-column -->
         <div class="col">
           <h3>Outcome</h3>
-<p>The final design was approved by Cathy and she is excited to build out the new experience and launch it soon. I’m currently looking at platforms to host and maintain her site going forward.
- As my first project of 2020 I'm excited for the future opportunities this project will bring! </p>
+<p>After some more feedback through online video chats and email reviews, I tweaked some colors and type, then generated a high fidelity mockup. The final design was approved by Cathy and I’m currently looking at a new platform to host and maintain her site.</p>
         </div>
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+              <figure>
+                <img src="img/argos1.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+              <figure>
+                <img src="img/argos2.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+              <figure>
+                <img src="img/argoswork.jpg" alt=""></figure>
+          </div>
+        <!-- right-column -->
+
       </div>
     </section>
     <section>
