--- a/dana.html
+++ b/dana.html
@@ -58,10 +58,7 @@
     <!-- left-column -->
     <div class="col">
       <h3>The Brief:</h3>
-      <p>Dana approached me about creating a gallery for her illustrations that would work as a launching pad
-        to her e-commerce profiles where she sold her artwork. I was very impressed by her work and jumped on
-        the project right away. I put together a web brief that would capture the requirements of her site and
-        after some email exchanges we came up with a vision for her gallery.
+      <p>Dana approached me about creating a website for her illustrations that would easily connect art enthusiasts to her online shop and purchase her works. She also wanted to create an online presence starting with her site and to better define her brand.  I was very impressed by her work and jumped on the project right away.
 </p>
     </div>
       <!-- right-column -->
@@ -79,9 +76,7 @@
       <div class="container">
         <!-- long-column -->
         <div class="col">
-            <figure>
-              <img src="img/danashot.jpg" alt="">
-            </figure>
+              <img src="img/danahome.jpg" alt="">
         </div>
         </div>
 
@@ -93,8 +88,7 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Challlenge and Process: </h3>
-<p>We determined that the target audience would be art enthusiasts who shop at places such as Etsy and Studio6 or collect things on Pinterest. With this in mind, I wanted to provide users the ability to quickly and easily sift through multiple art works in one go. It was also very important to create a site that would elevate her work and not compete with it visually. </p>
-<p>We then worked together on a mood board to capture her desired colors, aesthetic and visual feel. After some wireframe exploration, we landed on a grid style as the winning layout. From there I explored fonts and played with color hues, saturations and grays; as well as spacing and sizing of elements. I created a final mockup with Figma and now I’m exploring web platforms that will enable her to maintain her site and update content easily. 
+<p>Initially Dana had a vague sense of what her brand should be, but she definitely wanted to channel the same feel her illustrations inspired. I went through and looked at various illustrator’s sites looking at everything from layout, typography and color to learn what it takes to craft a unique voice. With those ideas in mind, I sketched some layout options and presented Dana two wireframes.  
 </p>  </div>
         <!-- right-column -->
         <div class="col">
@@ -107,11 +101,95 @@
       <div class="container">
         <!-- long-column -->
         <div class="col">
+              <img src="img/danawires.png" alt="">
+        </div>
+        </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+        <div class="col">
+<p>My research allowed me to discover new font types, weights, and subtle layout details that contributed to crafting a custom look. I wanted to dig deeper into what inspired Dana’s illustrations and her visual aesthetic, so I asked her to put together a mood board of visuals that that best represented her desired feel.
+</p> </div>
+        <!-- right-column -->
+        <div class="col">
+        </div>
+        </div>
+      </div>
+    </section>
+
+    <section >
+      <div class="container">
+        <!-- long-column -->
+        <div class="col">
+              <img src="img/danamood.jpg" alt="">
+        </div>
+        </div>
+    </section>
+
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+
+
+          </div>
+        <div class="col">
+          <p>Her illustrations served as inspiration for me to create custom navigation elements such as hover icons. They also played nicely with her pair of fonts which added to the whimsical feel of her illustrations.
+</p>
+<img src="img/eye.png" alt="">
+      </div>
+        <!-- right-column -->
+
+        </div>
+      </div>
+    </section>
+    <section >
+      <div class="container">
+        <!-- long-column -->
+        <div class="col">
+            <figure>
+              <img src="img/danashot.jpg" alt="">
+            </figure>
+        </div>
+        </div>
+    </section>
+    <section >
+      <div class="container">
+        <!-- long-column -->
+        <div class="col">
             <figure>
               <img src="img/danashot2.jpg" alt="">
             </figure>
         </div>
         </div>
+    </section>
+    <section >
+      <div class="container">
+        <!-- long-column -->
+        <div class="col">
+            <figure>
+              <img src="img/danashot3.jpg" alt="">
+            </figure>
+        </div>
+        </div>
+    </section>
+    <section >
+      <div class="container">
+        <div class="row myrow">
+          <!-- left-column -->
+          <div class="col">
+          </div>
+        <div class="col">
+<p>It all came together well in the final visual mockup of her site. The grid system was a best fit because I wanted users to quickly and easily sift through multiple art works in one go. This layout also elevated her work and did not distract or compete with it visually. Now I’m identifying a platform that will easily allow her to maintain and update content with ease going forward.
+</p>
+      </div>
+        <!-- right-column -->
+
+        </div>
+      </div>
     </section>
 
     <section>
