--- a/sinergia.html
+++ b/sinergia.html
@@ -84,7 +84,8 @@
           <!-- left-column -->
         <div class="col">
           <h3>The Challenge</h3>
-<p>The challenge was not knowing Sinergia’s business priorities. So, I got familiar with their work by looking through their mission statement and values, then I got a good sense of what seemed most important - taking action. </p>
+<p>The challenge was not knowing Sinergia’s business priorities. So, I got familiar with their work by looking through their mission statement and values, which gave me a good sense of what seemed most important - taking action.
+</p>
 <p>When you land on the current home page, you’ll see that there are a few too many navigation items to pick from. I thought about user-centered design and guiding principles, so I reduced the number of menu items to ease navigation overload, created CTA buttons for important features, such as the donation and volunteer pages, and visually emphasized the human touch behind their efforts. </p>
 </div>
         <!-- right-column -->
